--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,11 @@ python-dotenv
 numpy
 scipy
 ultralytics
+av
+#python -m pip install --upgrade pip
+#pip install -r requirements.txt --ignore-installed blinker
+
+#wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
+#dpkg -i cloudflared-linux-amd64.deb
+#apt-get install -f   # to fix any missing dependencies
+#cloudflared tunnel --url http://localhost:5000 --no-autoupdate
