--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ numpy
 scipy
 ultralytics
 av
+flask-socketio eventlet #websocket
 #python -m pip install --upgrade pip
 #pip install -r requirements.txt --ignore-installed blinker
 
