--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,41 @@
-opencv-contrib-python
-ftfy
-regex
-einops
-timm
-flask
-gunicorn
-Flask-SQLAlchemy
-transformers
-python-dotenv
-numpy
-scipy
-ultralytics
-av
-flask-socketio eventlet #websocket
+# Core ML libraries
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+transformers>=4.21.0
+timm>=0.9.0
+numpy>=1.21.0
+scipy>=1.7.0
+einops>=0.6.0
+setuptools>=81.0.0  # Updated to avoid pkg_resources deprecation
+
+# Computer Vision
+opencv-contrib-python>=4.5.0
+ultralytics>=8.0.0
+Pillow>=8.3.0
+
+# Web Framework
+flask>=2.0.0
+Flask-SQLAlchemy>=3.0.0
+flask-socketio>=5.0.0
+python-socketio>=5.0.0
+simple-websocket>=0.10.0
+waitress>=2.1.0
+
+# Utilities
+python-dotenv>=0.19.0
+ftfy>=6.0.0
+regex>=2021.0.0
+av>=8.0.0
+
+# Security
+werkzeug>=2.0.0
+
+# Optional: For better performance
+# Install PyTorch with CUDA support using:
+# FOR CUDA:  conda install pytorch torchvision torchaudio pytorch-cuda=11.8 -c pytorch -c nvidia
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+
 #python -m pip install --upgrade pip
 #pip install -r requirements.txt --ignore-installed blinker
 
